# hands-on-lab

./: .gitignore  README.md
ai/agent/context-engineering/: 1_write_context.ipynb  2_select_context.ipynb  3_compress_context.ipynb  4_isolate_context.ipynb  README.md  requirements.txt  utils.py
ai/agent/langchain/: 01-quickstart.py  06-initialize-mysql.md  07-retriever-filter.py  08-structure-pydantic.py  09-generate-data.py  10-classification.py  11-summarize-mapreduce.py  11-summarize-refine.py  11-summarize-stuff.py  12-lcel-example-2.py  12-lcel-example-3.py  13-custom_tools.py  14-elasticsearch-store.py  15-index-api-deduplicate.py  16-employee-handbook.md  16-markdown-header-text-splitter.py  17-load-markdown-index-elasticsearch-retreiver-after-change.py  17-load-markdown-index-elasticsearch-retreiver.py  pyproject.toml  record_manager_cache.sql
ai/agent/langgraph/: 01-build-basic-chatbot.py  02-enhance-chatbot-with-tools.py  03-add-memory-to-chatbot copy.py  04-human-in-the-loop.py  05-customize-state.py  06-time-travel.py  07-review-tool-calls.py  08-wait-user-input-agent.py  08-wait-user-input-simple.py  09-multi-agent-multi-turn.py  10-agent-example.py  langgraph_utils.py  pyproject.toml
ai/agent/llamaindex/: 01-quickstart.py  02-components.ipynb  03-mcp.py  03-tools.ipynb  04-agents.ipynb  05-workflows.ipynb  06-ingest-pipeline-restore.py  06-ingest-pipeline-save.py  07-redis-ingest-pipeline.py  08-conversations.json  08-elasticsearch-index-no-embedding.py  pyproject.toml
ai/agent/llamaindex/06-data/: test1.txt
ai/agent/llamaindex/06-pipeline_storage/: docstore.json  llama_cache
ai/agent/llamaindex/07-data/: test1.txt  test2.txt  test3.txt
ai/agent/smolagents/examples/rag/: main.py  pyproject.toml
ai/agent/smolagents/observability/: pyproject.toml  trace.py
ai/agent/smolagents/tool/: 01-load-tool.py  02-image.py  03-langchain.py  04-mcp.py  docker-compose.yaml  pyproject.toml
ai/browser-use/use-case/: pyproject.toml  quickstart.py
ai/claude/mcp/server/mysql_mcp_server/: .gitignore  pyproject.toml
ai/claude/mcp/server/mysql_mcp_server/tests/: test_server.py
ai/claude/mcp/server/weather/: pyproject.toml
ai/claude/mcp/server/weather/src/weather/: server.py
ai/fine-tuning/: 01-bitfit.ipynb
ai/gpu/script/: ubuntu-kind-gpu-cluster.sh
ai/gpu/setup/: cleanup.sh  install.sh  (+5 more)
ai/langchain/: 01-client.py  02-history-streaming.py  03-embedding.py  04-tool-agent-2.py  04-tool-agent.py  05-blog-rag.py  06-sql-agent.py  06-sql.py  08-structure-pydantic.py  11-summarize-refine-prompt.py  12-lcel-example-1.py  12-lcel.py  13-custom_tools-2.py  pyproject.toml
cilium/cluster_mesh/: README.md
client-go/client/: clientset.go  discoveryclient.go  dynamicclient.go  go.mod  go.sum  restclient.go
client-go/informer/: deltafifo.go  go.mod  go.sum  indexer.go  informer.go  reflector.go  sharedinformer.go  sharedinformerfactory.go
client-go/workqueue/: delayworkqueue.go  go.mod  go.sum  ratelimitworkqueue.go  workqueue.go  workqueue_deduplication.go
cluster-api/clusterresourceset/: cilium-1.12.5.yaml  cluster-1.kubeconfig  cluster-1.yaml  cluster-2.kubeconfig  cluster-2.yaml  clusterresourceset.yaml  kind.yaml
crossplane/quickstart/: .gitignore  README.md  function.yaml  functions.yaml  v1-managed-resource.yaml  v1-managed-resources.yaml  v2-compositions.yaml  v3-customize-parameter.yaml  v4-add-database.yaml  v5-add-table.yaml  v6-auto-ready.yaml  v7-namespace-scope.yaml  v8-install-configuration-packages.yaml  v8-kubernetes-rbac.yaml  v8-providerconfig.yaml  v8-team-resources.yaml
kubernetes/sidecar-containers/: 1-job-cannot-complete.yaml  2-init-and-main-containers.yaml  3-init-and-sidecar-and-main-containers.yaml  4-sidecar-containers-restart.yaml  5-readiness-probe.yaml  6-prestop-hook.yaml  7-resource-requests.yaml  8-resource-requests-init-container-after-sidecar-container.yaml  README.md  sidecar-feature-enable.yaml
multi-cluster/antrea/: README.md
multi-cluster/linkerd/: README.md
multi-cluster/submariner/: README.md  ipsec.txt
openai/assistant/: elasticsearch-assistant.ipynb  my-assistant.ipynb
program-language/design-pattern/: builder.go  builder_test.go  go.mod  singleton.go  singleton_test.go
program-language/golang/: concurrent_increase_num_atomic.go  concurrent_increase_num_mutex.go  context_withcancel.go  context_withtimeout.go  go.mod  goroutine_limit_number.go  nil.go  print_num_letter_alternately.go  synccond.go  synconce.go  syncpool.go  timeout.go
scheduler/: cluster.yaml
scheduler/descheduler/: README.md  deployment.yaml  remove-pods-violating-node-affinity.yaml
scheduler/kueue/: sample-job.yaml
scheduler/kwok/: 100_nodes.yaml  create-100-nodes.sh  node-template  pod.yaml
scheduler/my-scheduler/: Dockerfile  Makefile  build.sh  go.mod  go.sum  main.go
sre/: request.sh
wasm/proxy-wasm-go/: README.md  docker-compose.yaml  envoy.yaml  go.mod  hello.wasm  main.go
wasm/wasi/component-model/add/: Cargo.toml
wasm/wasi/component-model/add/src/: bindings.rs
wasm/wasi/component-model/add/wit/: world.wit
whereami/: Dockerfile  README.dm  README.md  deployment.yaml  main.go  service.yaml
(+4216 files in other folders)
