[project]
name = "langchain-demo"
version = "0.1.0"
description = "langchain demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "langchain>=0.3.19",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.18",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.7",
    "langserve>=0.3.1",
    "sse-starlette>=2.2.1",
    "uvicorn>=0.34.0",
]
