[project]
name = "langchain-demo"
version = "0.1.0"
description = "langchain demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.1.3",
    "bs4>=0.0.2",
    "fastapi>=0.115.8",
    "grandalf>=0.8",
    "langchain>=0.3.19",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.18",
    "langchain-elasticsearch>=0.3.2",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.7",
    "langchain-text-splitters>=0.3.6",
    "langgraph>=0.3.2",
    "langserve>=0.3.1",
    "mysqlclient>=2.2.7",
    "nltk>=3.9.1",
    "numexpr>=2.10.2",
    "pytube>=15.0.0",
    "sse-starlette>=2.2.1",
    "unstructured[md]>=0.17.2",
    "uvicorn>=0.34.0",
    "youtube-transcript-api>=0.6.3",
]
