[project]
name = "langgraph-demo"
version = "0.1.0"
description = "Langgraph demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.0.2",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.45",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.10",
    "langsmith>=0.3.13",
    "tavily-python>=0.5.1",
]
