[project]
name = "tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "elasticsearch>=8.17.1",
    "google-search-results>=2.4.2",
    "gradio-client>=1.7.0",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "mcp>=1.2.1",
    "python-dotenv>=1.0.1",
    "smolagents[mcp]>=1.9.2",
]
