[package]
name = "add"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.32.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:add"

[package.metadata.component.dependencies]
