[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.3.0",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.4.1",
    "smolagents>=1.9.2",
]
